  (CVE-2014-3488) (Michael Han via phunt)

  ZOOKEEPER-2405: getTGT() in Login.java mishandles confidential
  information (Michael Han via phunt)

  ZOOKEEPER-2477: documentation should refer to Java cli shell and not
  C cli shell (Abraham Fine via phunt)

  ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
  (Camille via phunt)

IMPROVEMENTS:

  ZOOKEEPER-2240 Make the three-node minimum more explicit in 
  documentation and on website (Shawn Heisey and Arshad Mohammad via phunt)


Release 3.4.8 - 2016-02-05

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1929: std::length_error on update children
  (Charles Strahan via rgs)

  ZOOKEEPER-2211: PurgeTxnLog does not correctly purge when snapshots and
  logs are at different locations (Arshad Mohammad via rgs)

  ZOOKEEPER-2311: assert in setup_random
  (Marshall McMullen via rgs)

  ZOOKEEPER-2295: TGT refresh time logic is wrong
  (Arshad Mohammad via rgs)

  ZOOKEEPER-2281: ZK Server startup fails if there are spaces in the JAVA_HOME
  path (Neha Bathra via cnauroth)

  ZOOKEEPER-2340: JMX is disabled even if JMXDISABLE is false
  (Arshad Mohammad via rgs)

  ZOOKEEPER-2229: Several four-letter words are undocumented
  (Chris Nauroth via rgs)

  ZOOKEEPER-2347: Deadlock shutting down zookeeper
  (Rakesh R via rgs)

  ZOOKEEPER-2360: Update commons collections version used by tests/releaseaudit
  (phunt via cnauroth)

  ZOOKEEPER-2243: Supported platforms is completely out of date (cnauroth)

Release 3.4.7 - 2015-11-08

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1888. ZkCli.cmd commands fail with "'java' is not recognized as an
  internal or external command" (Ivan Mitic via michim)

  ZOOKEEPER-1878. Inconsistent behavior in autocreation of dataDir and
  dataLogDir (Rakesh R via michim)

  ZOOKEEPER-1901. [JDK8] Sort children for comparison in AsyncOps tests
  (Andrew Purtell via michim)

  ZOOKEEPER-1906. zkpython: invalid data in GetData for empty node
  (Nikita Vetoshkin via michim)
